Better api documentation
